--- a/.github/workflows/master_reconnaissance-de-vehicules.yml
+++ b/.github/workflows/master_reconnaissance-de-vehicules.yml
@@ -34,7 +34,8 @@ jobs:
       - name: Install pytest
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install pipenv
+          pipenv install --system --deploy --ignore-pipfile
         # Run the tests
       - name: Run tests
         run: python -m pytest tests
