--- a/.github/workflows/master_reconnaissance-de-vehicules.yml
+++ b/.github/workflows/master_reconnaissance-de-vehicules.yml
@@ -38,7 +38,7 @@ jobs:
           pipenv install --system --deploy --ignore-pipfile
         # Run the tests
       - name: Run tests
-        run: pipenv run python -m pytest tests
+        run: pipenv run pytest
   build:
     runs-on: 'ubuntu-latest'
     needs: 'test'
