--- a/.github/workflows/master_reconnaissance-de-vehicules.yml
+++ b/.github/workflows/master_reconnaissance-de-vehicules.yml
@@ -34,11 +34,10 @@ jobs:
       - name: Install pytest
         run: |
           python -m pip install --upgrade pip
-          pip install pipenv
-          pipenv install --system --deploy --ignore-pipfile
+          pip install -r requirements.txt
         # Run the tests
       - name: Run tests
-        run: pipenv run pytest
+        run: pytest
   build:
     runs-on: 'ubuntu-latest'
     needs: 'test'
