Add or update the App Service deployment workflow configuration from Azure Portal.

--- a/.github/workflows/master_apivincent.yml
+++ b/.github/workflows/master_apivincent.yml
@@ -1,8 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python app to Azure Web App - apivincent
+name: Build and deploy container app to Azure Web App - apivincent
 
 on:
   push:
@@ -12,56 +11,41 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: 'ubuntu-latest'
 
     steps:
-      - uses: actions/checkout@v4
+    - uses: actions/checkout@v2
 
-      - name: Set up Python version
-        uses: actions/setup-python@v1
-        with:
-          python-version: '3.12'
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
 
-      - name: Create and start virtual environment
-        run: |
-          python -m venv venv
-          source venv/bin/activate
+    - name: Log in to registry
+      uses: docker/login-action@v2
+      with:
+        registry: https://apivincent.azurecr.io/
+        username: ${{ secrets.AzureAppService_ContainerUsername_9f69073051924d8686e2b4ae0e0a892e }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_23f37602fe0d47a783757081a2e8e836 }}
 
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
-
-      - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v3
-        with:
-          name: python-app
-          path: |
-            release.zip
-            !venv/
+    - name: Build and push container image to registry
+      uses: docker/build-push-action@v3
+      with:
+        push: true
+        tags: apivincent.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_9f69073051924d8686e2b4ae0e0a892e }}/apivincent:${{ github.sha }}
+        file: ./Dockerfile
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: 'production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v3
-        with:
-          name: python-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-
-      - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v2
-        id: deploy-to-webapp
-        with:
-          app-name: 'apivincent'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_E3887BC48F2748ED826574C14300F3A3 }}
+    - name: Deploy to Azure Web App
+      id: deploy-to-webapp
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'apivincent'
+        slot-name: 'production'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_a7f7a747ede5431cb6b29a299617cfd1 }}
+        images: 'apivincent.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_9f69073051924d8686e2b4ae0e0a892e }}/apivincent:${{ github.sha }}'
