--- a/.github/workflows/master_apivincent.yml
+++ b/.github/workflows/master_apivincent.yml
@@ -10,6 +10,34 @@ on:
   workflow_dispatch:
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        # Run in all these versions of Python
+        python-version: [3.11]
+    steps:
+        # Setup which version of Python to use
+      - name: Checkout repository files
+        uses: actions/checkout@v2
+      - name: Set Up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+
+        # Display the Python version being used
+      - name: Display Python version
+        run: python -c "import sys; print(sys.version)"
+
+        # Install pytest
+      - name: Install pytest
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+        # Run the tests
+      - name: Run tests
+        run: pytest
   build:
     runs-on: 'ubuntu-latest'
 
